--- a/.github/workflows/github-pages.yml
+++ b/.github/workflows/github-pages.yml
@@ -4,25 +4,50 @@ on:
     push:
         branches:
             - main
+            - master
+
+# Sets permissions of the GITHUB_TOKEN to allow deployment to GitHub Pages
+permissions:
+    contents: read
+    pages: write
+    id-token: write
+
+# Allow only one concurrent deployment
+concurrency:
+    group: "pages"
+    cancel-in-progress: true
 
 jobs:
-    github-pages:
+    # Build job
+    build:
         runs-on: ubuntu-latest
         steps:
-            - uses: actions/checkout@v3
-
+            - name: Checkout
+              uses: actions/checkout@v3
+            - name: Setup Pages
+              uses: actions/configure-pages@v3
             - name: Setup Ruby
               uses: ruby/setup-ruby@v1
               with:
-                  ruby-version: "3.1"
+                  ruby-version: "3.2" # Use a more recent Ruby version
                   bundler-cache: true
+            - name: Install dependencies
+              run: bundle install
+            - name: Build with Jekyll
+              run: bundle exec jekyll build
+              env:
+                  JEKYLL_ENV: production
+            - name: Upload artifact
+              uses: actions/upload-pages-artifact@v2
 
-            - name: Build and deploy
-              uses: jeffreytse/jekyll-deploy-action@v0.5.0
-              with:
-                  provider: "github"
-                  token: ${{ secrets.GITHUB_TOKEN }}
-                  branch: "gh-pages"
-                  jekyll_src: "./"
-                  jekyll_cfg: "_config.yml"
-                  cname: ""
+    # Deployment job
+    deploy:
+        environment:
+            name: github-pages
+            url: ${{ steps.deployment.outputs.page_url }}
+        runs-on: ubuntu-latest
+        needs: build
+        steps:
+            - name: Deploy to GitHub Pages
+              id: deployment
+              uses: actions/deploy-pages@v2
