[Update] Enhance appearance

--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,7 @@
 title: Comprehensive Guide to Transformers for Computer Vision Engineers
 description: A comprehensive guide covering transformer theory and applications in computer vision
 theme: jekyll-theme-cayman
+author: trietvo3105
 baseurl: "/Comprehensive-Guide-to-Transformers-for-CV"
 url: "https://trietvo3105.github.io"
 github:
